# Machine-Language-Simulator

./: CMakeLists.txt  Instructions.cpp  Instructions.h  MLHeader.h  MLImplementation.cpp  Machine.cpp  Machine.h  Memory.cpp  Memory.h  README.md  Register.cpp  Register.h  instructions.cpp  instructions.h  main.cpp  test.txt
Headers/: Instructions.h  Machine.h  Memory.h  Register.h
Implementation/: Instructions.cpp  Machine.cpp  Memory.cpp  Register.cpp  main.cpp
